--- a/React/bank/src/index.css
+++ b/React/bank/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,31 +12,20 @@ code {
     monospace;
 }
 
-.modal-transactions {
-  max-width: 90vw;
+.modal {
+  overflow-y: auto;
 }
-
-.modal-body-scrollable {
-  max-height: 70vh;
+.modal-90w {
+  max-width: 90vw;
+  max-height: 18vw;
+  overflow-y: auto;
+}
+.transaction-item {
+  background: white;
+}
+.scrollable-container {
+  max-height: 50vh;
   overflow-y: auto;
   padding: 20px;
-}
-
-/* Better scrollbar styling */
-.modal-body-scrollable::-webkit-scrollbar {
-  width: 10px;
-}
-
-.modal-body-scrollable::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 10px;
-}
-
-.modal-body-scrollable::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 10px;
-}
-
-.modal-body-scrollable::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  box-sizing: border-box;
 }
