Ver 0.1.0.6.3 - Added more spaces between text in profile modal and removed I-beam cursor appearing when user clicks on not editable text

--- a/React/bank/src/index.css
+++ b/React/bank/src/index.css
@@ -11,6 +11,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  user-select: none;
+}
+
+.card, .btn, .modal-content {
+  cursor: default;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
