Ver 0.7.3 - Added animations, removed unused scripts, fixed bugs

--- a/React/bank/src/index.css
+++ b/React/bank/src/index.css
@@ -81,3 +81,9 @@ code {
   padding: 20px;
   box-sizing: border-box;
 }
+
+html, body, #root {
+  background-color: #111827; 
+  margin: 0;
+  padding: 0;
+}
